# TheBindingProblem

./: .gitignore  README.md  bag_gen.py  bag_stable_loc_gen.py  dotproduct_probe.py  dotproduct_roc.py  location_stable_cls_activations.py  pyproject.toml  superposition_cls_activations.py  superposition_probe.py  tri_activations.py  tri_dataset.py
BindingProblem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bag3_dataset/: metadata.jsonl
bag_dataset/: test_metadata.csv  train_metadata.csv  val_metadata.csv
bag_dataset_location_stable_0/: different_metadata.jsonl  same_metadata.jsonl
bag_dataset_location_stable_1/: different_metadata.jsonl  same_metadata.jsonl
vit_prisma/models/: model_loader.py
vit_prisma/utils/: get_activations.py
vit_prisma/visualization/: visualize_attention.py
